sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:19: error: ')' expected but '}' found.
    }
    ^